// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Selection-field-name-"
    style={Object {}}
  >
     
  </label>
  <div>
    <input
      className="form-control"
      disabled={true}
      id="view-type-Form-field_type-Selection-field-name-"
      onChange={[Function]}
      onTouchTap={[Function]}
      style={
        Object {
          "backgroundColor": "white",
          "cursor": "pointer",
        }
      }
      type="text"
      value="New"
    />
    <div
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Selection-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div>
    <input
      className="form-control"
      disabled={true}
      id="view-type-Form-field_type-Selection-field-name-"
      onChange={[Function]}
      type="text"
      value="New"
    />
    <div
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>
</div>
`;

exports[`getField for Form required 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Selection-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div>
    <input
      className="form-control"
      disabled={true}
      id="view-type-Form-field_type-Selection-field-name-"
      onChange={[Function]}
      onTouchTap={[Function]}
      style={
        Object {
          "backgroundColor": "white",
          "cursor": "pointer",
        }
      }
      type="text"
      value="New"
    />
    <div
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>
</div>
`;

exports[`getField for Form required with empty value 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Selection-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div>
    <input
      className="form-control"
      disabled={true}
      id="view-type-Form-field_type-Selection-field-name-"
      onChange={[Function]}
      onTouchTap={[Function]}
      style={
        Object {
          "backgroundColor": "white",
          "cursor": "pointer",
        }
      }
      type="text"
      value=" --- "
    />
    <div
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`getField for List 1`] = `
<div>
  <span>
     --- 
  </span>
</div>
`;

exports[`getField for Thumbnail 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-Selection-field-name-"
  >
     
  </label>
  <div>
    <span>
      New
    </span>
  </div>
</div>
`;
